# mcu6050Temp

./: CMakeLists.txt  README.md  main.c  mpu6050.c  mpu6050.h  utils.c  utils.h
